fixing spacing for main content

--- a/UI-III-Flexbox/great-idea/css/index.css
+++ b/UI-III-Flexbox/great-idea/css/index.css
@@ -197,6 +197,15 @@ h1, h2, h3, h4, h5 {
 	font-size: 14px;
   }
 
+  /*services.html*/
+  .main-content-services {
+	display: flex;
+  }
+
+  .text-content-services {
+	flex: 50%;
+  }
+  
   .bottom-content-services {
-	  display: flex;
+	display: flex;
   }
